--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Page Title Goes Here</title>
-  <meta name="description" content="Description Goes Here">
+  <meta name="Plant Tracking" content="Yay Plants">
 </head>
 <body>
-  <p>Hello! This is a website.</p>
+  <p>Hello! This will be able plants.</p>
 </body>
 </html>
