--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Plant Tracking</title>
-  <meta name="Plant Tracking" content="Yay Plants">
-</head>
-<body>
-  <p>Hello! This will be able plants.</p>
-</body>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=html/home.html">
+        <script type="text/javascript">
+            window.location.href = "html/home.html"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow this <a href='html/home.html'>link to the home page</a>.
+    </body>
 </html>
